# Thesis-dynamic-networks

./: .gitignore  benchmark.ipynb  benchmark_DyNetX.py  benchmark_raphtory.py  benchmark_tglib.py  clustering_coefficient.py  di  fix_format_review.py  fix_format_s_t_ts.py  fix_format_wiki.py  load time.eps  memory.eps  model_creation_log.eps  nodes and edges.eps  pagerank.pnf  plot_result.py  pytglib.cp310-win_amd64.pyd  raphtory_Graph.txt  stats time.eps  test.py  test.py.lprof  test_TGLib.py  test_algorithms.py  test_dynetx.py  test_raphtory.py  vtune_results.xlsx
Raphael/: stats.py  test.py
benchmark/: benchmark_2.ipynb  benchmark_DyNetX.py  benchmark_raphtory.py  benchmark_tglib.py  cc_multi_threading.py  fix_format.py  paths_multi_threading.py  plots.py  vtune.py
datasets/: test.tg
hybridtempstruct-main/: creation.eps  creation_results_networkx_enron.pkl  creation_results_networkx_realitymining.pkl  dictsortlist.py  intervalIntervalGraph.py  main.py  memory.eps  memory_results_adjtree_enron.pkl  memory_results_adjtree_realitymining.pkl  memory_results_interval_enron.pkl  memory_results_interval_realitymining.pkl  memory_results_networkx_enron.pkl  memory_results_networkx_realitymining.pkl  memory_results_snapshot_enron.pkl  memory_results_snapshot_realitymining.pkl  memory_results_tvg_enron.pkl  memory_results_tvg_realitymining.pkl  plot_figures.py  realitymining.edges  snapshotGraph.py  tvg.py
hybtidstruct/: main.py
results/: cc_time.p  load_time_results.p  num_edges.p  pr_time.p  stats_time_results.p
save games/: Bohemia02_Backup.eu4
tglib/: .gitlab-ci.yml  .gitmodules  README.md  (+2 more)
tglib/tglib_cpp/src/native/: CMakeLists.txt  Main.cpp
(+350 files in other folders)
